--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -104,4 +104,23 @@ a {
   html {
     color-scheme: dark;
   }
+} */
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+nav {
+  display: flex;justify-content: space-evenly;
+  align-items: center;
+  gap: 10px;
+  background-color: black;
+  height: 80px;
+}
+
+a {
+  color: white;
+  text-decoration: none;
 }
