--- a/styles/globals.css
+++ b/styles/globals.css
@@ -121,6 +121,14 @@ nav {
 }
 
 a {
-  color: white;
+  color: red;
   text-decoration: none;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
